- runFlow:
    file: open-manga.yaml
- runFlow:
    when:
      visible:
        id: manga-start-story
    commands:
      - tapOn:
          id: manga-start-story
- tapOn:
    id: manga-step-story
- assertVisible:
    id: manga-step-story
